--- a/store_sales_prediction.ipynb
+++ b/store_sales_prediction.ipynb
@@ -5084,6 +5084,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
@@ -5099,7 +5100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.8.13"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
